5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1800_2569.log
== TEST (2019-06-11 10:55:52) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

d = (((v[i] - m)**(1/2))/(size(v)-1))**(1/2)

for i in range(size(v)):
	d[i] = (((v[i] - m)**(1/2))/(size(v)-1))**(1/2)
	
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:56:13) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

d = (((v[i] - m)**(1/2))/(size(v)-1))**(1/2)

for i in range(size(v)):
	d = (((v[i] - m)**(1/2))/(size(v)-1))**(1/2)
	
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:56:22) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

d = (((v[i] - m)**(1/2))/(size(v)-1))**(1/2)

for i in range(size(v)):
	d = (((v[i] - m)**(1/2))/(size(v)-1))**(1/2)
	
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:56:43) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

d = (((v - m)**(1/2))/(size(v)-1))**(1/2)

for i in range(size(v)):
	d = (((v[i] - m)**(1/2))/(size(v)-1))**(1/2)
	
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:56:56) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)



for i in range(size(v)):
	d = (((v[i] - m)**(1/2))/(size(v)-1))**(1/2)
	
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:01:45) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2
b = size(v) -1

for i in range(size(v)):
	d = (a/b)**(1/2)
	
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:02:13) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2 + a
b = size(v) -1

for i in range(size(v)):
	d = (a/b)**(1/2)
	
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:03:51) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2
b = size(v) -1

for i in range(size(v)):
	d = ((v[i]-m)**2/ size(v)-1)**(1/2)
	
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:04:13) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2
b = size(v) -1

for i in range(size(v)):
	d = ((v[i]-m)**2/ size(v)-1)**(1/2)
	
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:05:05) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2
b = size(v) -1

for i in range(size(v)):
	d = d +  ((v[i]-m)**2/ size(v)-1)**(1/2)
	
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:05:18) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2
b = size(v) -1
d = 0
for i in range(size(v)):
	d = d +  ((v[i]-m)**2/ size(v)-1)**(1/2)
	
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:06:02) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2
b = size(v) -1

for i in range(size(v)):
	d = (sum(v-m)**2/ size(v)-1)**(1/2)
	
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:06:08) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2
b = size(v) -1

for i in range(size(v)):
	d = (sum(v-m)**2/ size(v)-1)**(1/2)
	
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:06:18) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2
b = size(v) -1

for i in range(size(v)):
	d = ((v[i]-m)**2/ size(v)-1)**(1/2)
	
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:07:14) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2
b = size(v) -1

for i in range(size(v)):
	d = sqrt((v[i]-m)**2/ size(v)-1)
	
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:08:03) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)
a = 0
a = (v-m)**2 + a
b = size(v) -1

for i in range(size(v)):
	d = sqrt(a/b)
	
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:08:15) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)
a = 0
a = (v-m)**2 + a
b = size(v) -1

for i in range(size(v)):
	d = sqrt(a/b)
	
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:09:54) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2
b = size(v) -1
d = 0
for i in range(size(v)):
	d = (v[i]-m)**2 + d
	c = sqrt(d/size(v)-1)
	
print(round(c,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:10:22) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)

a = (v-m)**2
b = size(v) -1
d = 0
for i in range(size(v)):
	d = (v-m)**2 + d
	c = sqrt(d/size(v)-1)
	
print(round(c,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:12:34) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)
n = size(v)
a = (v-m)**2
b = size(v) -1
d = 0
for i in range(size(v)):
	d = ((v[i]-m)**2 + d)/(n-1)**(1/2)
	
	
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:13:43) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)
n = size(v)
a = (v-m)**2
b = size(v) -1
d = 0
for i in range(size(v)):
	d = ((v[i]-m)**2 + d)/(n-1))**(1/2)
	
	
print(round(d,3))
-- ERROR:
File "XXXX", line 11
    d = ((v[i]-m)**2 + d)/(n-1))**(1/2)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:13:49) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)
n = size(v)
a = (v-m)**2
b = size(v) -1
d = 0
for i in range(size(v)):
	d = (((v[i]-m)**2 + d)/(n-1))**(1/2)
	
	
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:16:18) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)
n = size(v)

d = 0

for i in range(size(v)):
	d = d + ((v[i] - m)**2)/(n-1)

print(round(d**(1/2),3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:16:36) 
-- CODE:
from numpy import *

v = array(eval(input("insira oq quiser:")))

m = sum(v)/size(v)
n = size(v)

d = 0

for i in range(size(v)):
	d = d + ((v[i] - m)**2)/(n-1)

print(round(d**(1/2),3))
	
-- EXECUTION TIME:
1.09699
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:37:13) 
-- CODE:
from numpy import *

v = array(eval(input("insira os numeros:"))
	
m = sum(v)/size(v)
n = size(v)
	
for i in range(size(v)):
	
	d = d + ((v[i] - m)**2)/(n-1)
			 
			 
print(round(d**(1/2),3))
-- ERROR:
File "XXXX", line 5
    m = sum(v)/size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:37:20) 
-- CODE:
from numpy import *

v = array(eval(input("insira os numeros:")))
	
m = sum(v)/size(v)
n = size(v)
	
for i in range(size(v)):
	
	d = d + ((v[i] - m)**2)/(n-1)
			 
			 
print(round(d**(1/2),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:37:25) 
-- CODE:
from numpy import *

v = array(eval(input("insira os numeros:")))
	
m = sum(v)/size(v)
n = size(v)
	
for i in range(size(v)):
	
	d = d + ((v[i] - m)**2)/(n-1)
			 
			 
print(round(d**(1/2),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:37:43) 
-- CODE:
from numpy import *

v = array(eval(input("insira os numeros:")))
	
m = sum(v)/size(v)
n = size(v)
d = 0	
for i in range(size(v)):
	
	d = d + ((v[i] - m)**2)/(n-1)
			 
			 
print(round(d**(1/2),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:37:53) 
-- CODE:
from numpy import *

v = array(eval(input("insira os numeros:")))
	
m = sum(v)/size(v)
n = size(v)
d = 0	
for i in range(size(v)):
	
	d = d + ((v[i] - m)**2)/(n-1)
			 
			 
print(round(d**(1/2),3))
-- EXECUTION TIME:
1.05017
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
